# oldstuff-moonstone

./: .gitignore  READDIR.txt  README.md  rebuild.bat
src/: CMakeLists.txt  DONELIST  FEATLOST.txt  PLAIN  Remus_shell_specification.txt  TASKLIST  TODO.txt  lain.sln  noemi-vs2010.sln  package.bat  subsystems.txt
src/DAL/: DataBase.h  defines.h  domain.h
src/DAL/SQLite/: DataBase.cpp  DataBase.h  DomainImpl.h  RefCounter.cpp  RefCounter.h  SQL.h  SQLite.cpp  SQLite.h  SQLiteEasy.cpp  SQLiteEasy.h  SQLiteTag.cpp  TagIterator.cpp  TagIterator.h
src/core/: UniStr.cpp  UniStr.h  int_type.h  unicode.h
src/dal/: CMakeLists.txt  DatabaseInterface.cpp  DatabaseInterface.h  db_sqlite_impl.cpp  db_sqlite_impl.h  dbmeta.h  sql_stmt_interface.h  sqlite3pal.h  sqlitemeta.h  stmt_sqlite_impl.cpp  stmt_sqlite_impl.h  supported_db.h
src/doc/: HOWTOs
src/everything/: CMakeLists.txt  Preferences.cc  Preferences.h  QFeedbackEvent.h  everything.pro  machinemodel.cc  machinemodel.h  machinemodelitem.cc  machinemodelitem.h  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  searchfiledbmodel.cc  searchfiledbmodel.h  treeitem.cc  treeitem.h  volumemodel.cc  volumemodel.h
src/gui/: CMakeLists.txt  DatabaseSelectionModel.h  DatabaseSession.cpp  DatabaseSession.h  DatabaseSessionLayout.ui  DbInfoModel.cpp  DbSelModel.h  Explorer.ui  GUIDesign.txt  GeneralExplorer.cpp  GeneralExplorer.h  KBModel.cpp  KBModel.h  KBSearchResult.hpp  KBView-file.cpp  KBView-file.h  KBView-tag-file-inter.cpp  KBView-tag-file-inter.h  KBView-tag.cpp  KBView-tag.h  KBViewItem.cpp  KBViewItem.h  LainMain.cpp  LainMain.h  MainWindow.cpp  OpenedDBList.cpp  OpenedDBList.h  Session.ui  SessionWindow.cpp  TODO.txt  TagEdit.cpp  TagEdit.h  TagSearchModel.cpp  TagSearchModel.h  TagSearchResultModel.h  TagSearcher.cpp  conformwidget.cpp  dock_file_explorer.ui  dock_tag_editor.ui  general_exploere.ui  (+10 more)
src/gui.legacy/: DbInfoModel.h  DbSelModel.cpp  OpenedDBList.h  SessionWindow.cpp  TagEdit.cpp  TagEdit.h  TagSearchResultModel.cpp  gui.vcxproj  mainwindow.h  mainwindow.ui  sessionwindow.h  tag.ui  uiresource.qrc
src/gui.legacy2/: CMakeLists.txt  DatabaseSession.h  GUIDesign.txt  KBModel.cpp  KBModel.h  KBSearchResult.hpp  KBView-file.cpp  KBView-tag-file-inter.cpp  KBView-tag-file-inter.h  KBView-tag.h  KBViewItem.h  SearchHandler.h  TagSearcher.h  conformwidget.h  dock_file_explorer.ui  general_explorer.ui  lain.ui  main.cpp  tag_dock.h
src/infra/: README  eventd.h  evid.h  fdpool.h  fdpool_linux.cc  fdpool_linux.h  fdpool_win32.cc  fdpool_win32.h  feedback.cc  feedback.h  notifier.cc  notifier.h  pollable.h  tasklet.h  tasklet_queue.cc  tasklet_queue.h  threadpool.cc  threadpool.h  tp_thread.h
src/kernel/: CMakeLists.txt  Database.cc  Database.cpp  Database.h  Database.h.legacy  Master.h  RelationMan.cpp  RelationMan.h  TASKLIST  TODO  TagMan.cpp  TagMan.h  TagManContext.cpp  TagManContext.h  TnodeMan.cpp  TnodeMan.h  access_point.cc  access_point.h  binlayerout.cpp  binlayerout.h  common.h  common_declare.h  error_handle.h  eventd.cc  eventd.h  evid.h  evqueue.h  evqueue_win32.cc  factory.cc  factory.h  fdpool.h  fdpool_win32.cc  fdpool_win32.h  feedback.cc  feedback.h  filemgr.cc  filemgr.h  fso.cpp  fso.h  fsodbman.cpp  (+63 more)
src/kernel/dal/: CMakeLists.txt  DatabaseInterface.h  db_sqlite_impl.cpp  dbmeta.h  sqlitemeta.h  stmt_sqlite_impl.cpp
src/kernel/legacy/: TnodeMan.h  binlayerout.cpp  binlayerout.h  common.h  common_declare.h  error_handle.h  fso.cpp  fso.h  ftman.h  metadb.cpp  metadb.h  pathc_unix.c  pathxx_win.cpp  tag_edit_action.cpp  tag_edit_action.h
src/kernel/plugin/: modinoti.h  plugin_base.h
src/monitor/: CMakeLists.txt  CROSS.txt  DESIGN_CHOICES.TXT  KNOWNBUGS.txt  README.txt  ROADMAP.txt  auth.h  daemon.cc  daemon.h  daemon_error.h  general_service.cc  packet_handler.cc  partition.h  priv.h  serialization.h  sp.cc  special_path.h  tracing.cc  tracing.h  version.h
src/monitor/win32/: auth.cc  boost_arctype.h  file_struct.h  journal.h  logusn.cc  main.cc  opened.h  partition.cc  partition_win32.cc  priv.cc  special_path.cc  tracing_win32.cc
src/moonstone/: CMakeLists.txt  FEATURE.txt  KNOWNBUGS.txt  daemon.cc  daemon.h  daemon_error.h  general_service.cc  general_service.h  lsconf.h  packet_handler.h  partition.cc  partition.h  sp.cc  sp.h  tracing.h  version.h
src/moonstone/linux/: special_path.cc
src/moonstone/win32/: boost_arctype.h  file_struct.h  logusn.cc  logusn.h  lsconf_win32.cc  main.cc  opened.cc  opened.h  special_path.cc
src/nexus/: CMakeLists.txt  Database.cc  Database.h  access_point.cc  access_point.h  dentry.h  index_engine.h  machine.cc  machine.h  macmgr.cc  main.cc  nexus.cc  nexus.h  nexus_fd.cc  nexus_fd.h  ray.cc  ray.h  search_engine.cc  search_engine.h  singleton.cc  singleton.h  sql_stmt.h  syntax.h  volmgr.h  volpreplet_win32.h  watching.cc  watching.h
src/nexus/dal/: db_sqlite_impl.cpp  db_sqlite_impl.h  dbmeta.cpp  sqlite3pal.h  sqlitemeta.cpp
src/nexus/legacy/: AsyncWQ.h  RelationMan.h  TagMan.h  TnodeMan.cpp  fswatcher.h  ftman.cpp
src/package/: README.txt
src/pal/: CMakeLists.txt  PlatformSpec.h  UniStr.cpp  UniStr.h  arch_march.h  daemon.h  daemon_unix.cc  daemon_win32.cc  int_type.h  ioinfo.h  ipc.cc  ipc.h  ipc_packet_type.h  ipc_unix.cc  ipc_win.cc  libop.h  native_event.h  native_event_win32.cc  path.cpp  path.h  path.hpp  path_win.c  pathc_win.c  pathxx.cpp  stdtype.h  unicode.h  unistr.cpp  unistr.h  volume.h  volume_win32.cc  whoami.h  whoami_unix.cc  whoami_win32.cc  xtdio.h
src/protocol/: .gitignore
src/protocol/protobuf/: gtest
src/reimu/: Category.cpp  Category.h  CategoryT.cpp  CommonDeleter.h  CommonT.h  Declares.h  Defaults.cpp  Defines.h  IndexedObject.h  Parameters.cpp  Parameters.h  RefCounter.cpp  RefCounter.h  Requirements.TXT  Tag.cpp  Tag.h  TagIterator.cpp  TagIterator.h  TagNode.h  TagParameters.cpp
src/shell/: remus.cpp  remus_cmd.cpp  remus_cmd.h  shtag.cpp  tag.cpp  tag.sln  tag.vcproj
src/testcases/: run.bat  testKernels.cpp  testKernels.h  testcases.pro
src/util/: noemishell.cpp
(+47 files in other folders)
