SET(QT_REQUIRED TRUE)
FIND_PACKAGE( Qt4 REQUIRED )

AUX_SOURCE_DIRECTORY( . GUI_SRC )
QT4_WRAP_UI(UI_H lain.ui)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

QT4_WRAP_CPP(MOC_SRC LainMain.h KBModel.h)

ADD_EXECUTABLE(lain ${UI_H} ${GUI_SRC} ${MOC_SRC})
TARGET_LINK_LIBRARIES(lain kernel QtCore4 QtGui4)
