AUX_SOURCE_DIRECTORY( . KERNEL_SRC )

LIST(REMOVE_ITEM KERNEL_SRC ./fswatcher.cpp)
LIST(REMOVE_ITEM KERNEL_SRC ./TagManContext.cpp)
#MESSAGE( ${KERNEL_SRC} )

ADD_LIBRARY(kernel SHARED ${KERNEL_SRC})
TARGET_LINK_LIBRARIES(kernel dal pal QtCore4)
SET_TARGET_PROPERTIES(kernel
	PROPERTIES
	LINK_INTERFACE_LIBRARIES ""
)
