AUX_SOURCE_DIRECTORY( . SRCXP )

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	MESSAGE(STATUS "Setup monitor/linux")
	SET(NXP "./linux")
	AUX_SOURCE_DIRECTORY("./linux" SRCNXP)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	MESSAGE(STATUS "Setup monitor/win32")
	SET(NXP "./win32")
	AUX_SOURCE_DIRECTORY("./win32" SRCNXP)
	SET(PLIB "Advapi32")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

INCLUDE_DIRECTORIES(${NXP})
INCLUDE_DIRECTORIES( . )

ADD_EXECUTABLE(monitor ${SRCXP} ${SRCNXP})
TARGET_LINK_LIBRARIES(monitor dal pal QtCore4 ${PLIB})
