AUX_SOURCE_DIRECTORY( . KERNEL_SRC )
AUX_SOURCE_DIRECTORY( dal/ DAL_SRC )

#LIST(REMOVE_ITEM KERNEL_SRC ./fswatcher.cpp)
#LIST(REMOVE_ITEM KERNEL_SRC ./TagManContext.cpp)
FILE(GLOB KERNEL_HEADER *.h)
FILE(GLOB DAL_HEADER dal/*.h)
#MESSAGE( ${KERNEL_SRC} )

ADD_LIBRARY(kernel SHARED ${KERNEL_SRC} ${KERNEL_HEADER} ${DAL_SRC} ${DAL_HEADER})
TARGET_LINK_LIBRARIES(kernel pal QtCore4)
SET_TARGET_PROPERTIES(kernel
	PROPERTIES
	LINK_INTERFACE_LIBRARIES ""
)
