SET(UNIX_SRC )
SET(WIN32_SRC ipc_win.cc volume_win32.cc native_event_win32.cc)
SET(COMMON_SRC unistr.cpp ipc.cc)

FILE(GLOB PAL_HEADER *.h)

IF(UNIX)
	SET(PAL_SRC ${COMMON_SRC} ${UNIX_SRC})
ENDIF(UNIX)

IF(WIN32)
	SET(PAL_SRC ${COMMON_SRC} ${WIN32_SRC})
ENDIF(WIN32)

ADD_LIBRARY(pal SHARED ${PAL_SRC} ${PAL_HEADER})
TARGET_LINK_LIBRARIES(pal QtCore4)
